<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="386dp"
        android:layout_height="606dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/cerrarSesion_btn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:onClick="cerrarSesion"
            android:text="@string/btn_cerrar_sesion"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/iniciarSesionPantalla"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="irIniciar"
                android:text="@string/btn_iniciar_pantalla"
                tools:text="@string/btn_iniciar_pantalla" />

            <Button
                android:id="@+id/registrarPantalla"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="irRegistrarse"
                android:text="@string/btn_registrar_pantalla"
                tools:text="@string/btn_registrar_pantalla" />

        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="509dp"
            android:gravity="center">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <androidx.cardview.widget.CardView
                    android:layout_width="258dp"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="#009688"
                    app:cardCornerRadius="20dp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/descripcion_principal" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/imageView"
                                android:layout_width="51dp"
                                android:layout_height="48dp"
                                app:srcCompat="@drawable/principal" />

                            <Button
                                android:id="@+id/principal"
                                style="@android:style/Widget.DeviceDefault.Button.Inset"
                                android:layout_width="136dp"
                                android:layout_height="wrap_content"
                                android:onClick="irPrincipal"
                                android:text="@string/principal_btn" />
                        </LinearLayout>

                    </LinearLayout>


                </androidx.cardview.widget.CardView>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <androidx.cardview.widget.CardView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="#8BC34A"
                    app:cardCornerRadius="20dp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/descripcion_mapa" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/imageView1"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                app:srcCompat="@drawable/mapa" />

                            <Button
                                android:id="@+id/mapa"
                                style="@android:style/Widget.DeviceDefault.Button.Inset"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:onClick="irMapa"
                                android:text="@string/mapa_btn" />
                        </LinearLayout>

                    </LinearLayout>


                </androidx.cardview.widget.CardView>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <androidx.cardview.widget.CardView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="#FF5722"
                    app:cardCornerRadius="20dp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/descripcion_scanner" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/imageView4"
                                android:layout_width="42dp"
                                android:layout_height="48dp"
                                app:srcCompat="@drawable/codigo" />

                            <Button
                                android:id="@+id/scanner"
                                style="@android:style/Widget.DeviceDefault.Button.Inset"
                                android:layout_width="120dp"
                                android:layout_height="wrap_content"
                                android:onClick="irScanner"
                                android:text="@string/scanner_btn" />
                        </LinearLayout>

                    </LinearLayout>


                </androidx.cardview.widget.CardView>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <androidx.cardview.widget.CardView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="#03A9F4"
                    app:cardCornerRadius="20dp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/descripcion_creadores" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/imageView5"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                app:srcCompat="@drawable/trabajador" />

                            <Button
                                android:id="@+id/creadores"
                                style="@android:style/Widget.DeviceDefault.Button.Inset"
                                android:layout_width="127dp"
                                android:layout_height="wrap_content"
                                android:onClick="irCreadores"
                                android:text="@string/creadores_btn" />
                        </LinearLayout>

                    </LinearLayout>


                </androidx.cardview.widget.CardView>

            </TableRow>


        </TableLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>