<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".creadoresActivity">

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/toro2" />

    <LinearLayout
        android:layout_width="311dp"
        android:layout_height="595dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.824">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="266dp"
                android:layout_height="195dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/foto1" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#03A9F4"
                android:gravity="center"
                android:text="@string/descripcion_alejo"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#03A9F4"
                android:gravity="center"
                android:text="@string/correo_alejo"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/button"
                style="@android:style/Widget.DeviceDefault.Button.Inset"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:onClick="irLinkedln"
                android:text="@string/alejo_btn" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:orientation="vertical"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>